lastrecorder (0.6) jaunty; urgency=low

  * Modularized source 

 -- Timur Izhbulatov <timochka@gmail.com>  Mon, 29 Jun 2009 04:01:51 +0400

lastrecorder (0.5) jaunty; urgency=low

  * Initial Release.

 -- Timur Izhbulatov <timochka@gmail.com>  Sun, 21 Jun 2009 01:28:31 +0400